force-app/main/default/objects/Form_Data__c/Form_Data__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object stores all the form summary data related to contact edition mapping, form submission and Questionnaire</description>
    <label>Form Data</label>
    <nameField>
        <displayFormat>FD-{0000000}</displayFormat>
        <label>Form Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>