force-app/main/default/objects/Form_Data__c/fields/Allowed_Responses__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Responses__c</fullName>
    <description>Allowed Responses of the form response enteries</description>
    <formula>IF(
	ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Feature_Category__c,&apos;Manual&apos;),
	1,
	IF(
		ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Form_Type__c,&apos;Link&apos;),
		1,
		IF(
			OR(ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Form_Entry__c,&apos;One Per Account&apos;),ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Form_Entry__c,&apos;One Per Booth&apos;)),
			1,
			IF(
				Forms_Permission__r.Form_Allocation__r.Entry_Limit__c=0,
				10000,
				Forms_Permission__r.Form_Allocation__r.Entry_Limit__c
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowed Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>