force-app/main/default/objects/Form_Data__c/fields/Approved_Responses__c.field-meta.xml
<CustomField>
    <fullName>Approved_Responses__c</fullName>
    <description>Count of Approved Or Approval Not Required Responses</description>
    <label>Approved Responses</label>
    <summaryFilterItems>
        <field>Form_Response_Entry__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Not Required, Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_Response_Entry__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Viewed, In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_Response_Entry__c.Form_Data__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>