force-app/main/default/objects/Form_Data__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Form Data (Assign To)</relationshipLabel>
    <relationshipName>Form_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>