force-app/main/default/objects/Form_Data__c/fields/Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up field to contact edition mapping to store in form data.</description>
    <label>Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>