force-app/main/default/objects/Form_Data__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up field to Edition to store in form data.</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>