force-app/main/default/objects/Form_Data__c/fields/Feature_Category__c.field-meta.xml
<CustomField>
    <fullName>Feature_Category__c</fullName>
    <formula>TEXT(Forms_Permission__r.Form_Allocation__r.Feature_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Category</label>
    <type>Text</type>
</CustomField>