force-app/main/default/objects/Form_Data__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <formula>Forms_Permission__r.Form_Allocation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Name</label>
    <type>Text</type>
</CustomField>