force-app/main/default/objects/Form_Data__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>Forms_Permission__r.Form_Allocation__r.Form_Type__c</description>
    <formula>TEXT( Forms_Permission__r.Form_Allocation__r.Form_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Type</label>
    <type>Text</type>
</CustomField>