force-app/main/default/objects/Form_Data__c/fields/Forms_Permission__c.field-meta.xml
<CustomField>
    <fullName>Forms_Permission__c</fullName>
    <description>This field refers to the Form Permission.</description>
    <label>Forms Permission</label>
    <referenceTo>Forms_Permission__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>