force-app/main/default/objects/Form_Data__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only Active Form Data will be shown to customers</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>