force-app/main/default/objects/Form_Data__c/fields/Is_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Is_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have read and agree to the contents of this document (Manual)</description>
    <inlineHelpText>I have read and agree to the contents of this document</inlineHelpText>
    <label>Is Agreed</label>
    <type>Checkbox</type>
</CustomField>