force-app/main/default/objects/Form_Data__c/fields/Is_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Is_Viewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox will be checked when customer viewed the form.</description>
    <inlineHelpText>Checkbox will be checked when customer viewed the form.</inlineHelpText>
    <label>Is Viewed</label>
    <type>Checkbox</type>
</CustomField>