force-app/main/default/objects/Form_Data__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <description>Backend field to support form filter functionality. Do not use on layout or in reports.</description>
    <inlineHelpText>Backend field to support form filter functionality. Do not use on layout or in reports.</inlineHelpText>
    <label>Overall Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>