force-app/main/default/objects/Form_Data__c/fields/Purchase_Data__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Data</label>
    <referenceTo>Purchase_Data__c</referenceTo>
    <relationshipLabel>Form Data</relationshipLabel>
    <relationshipName>Form_Data</relationshipName>
    <type>Lookup</type>
</CustomField>