force-app/main/default/objects/Form_Data__c/fields/Rejected_Responses__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Responses__c</fullName>
    <description>Count of Rejected Responses</description>
    <label>Rejected Responses</label>
    <summaryFilterItems>
        <field>Form_Response_Entry__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_Response_Entry__c.Form_Data__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>