force-app/main/default/objects/Form_Data__c/fields/Response_Count_All__c.field-meta.xml
<CustomField>
    <fullName>Response_Count_All__c</fullName>
    <description>All Form Response Enteries Count of the Form Data</description>
    <label>Response Count All</label>
    <summaryForeignKey>Form_Response_Entry__c.Form_Data__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>