force-app/main/default/objects/Form_Data__c/fields/Submitted_Responses__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Responses__c</fullName>
    <description>All Form Response Submitted Enteries Count of the Form Data</description>
    <label>Submitted Responses</label>
    <summaryFilterItems>
        <field>Form_Response_Entry__c.Status__c</field>
        <operation>equals</operation>
        <value>Submitted, Resubmitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_Response_Entry__c.Form_Data__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>