force-app/main/default/objects/Form_Data__c/fields/Total_Responses__c.field-meta.xml
<CustomField>
    <fullName>Total_Responses__c</fullName>
    <description>Count of all Responses</description>
    <label>Total Responses</label>
    <summaryFilterItems>
        <field>Form_Response_Entry__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Viewed</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_Response_Entry__c.Form_Data__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>