force-app/main/default/objects/Form_Data__c/validationRules/Response_Limit_Exceeded.validationRule-meta.xml
<ValidationRule>
    <fullName>Response_Limit_Exceeded</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
	AND(OR(ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Form_Entry__c,&apos;Multiple Per Account&apos;),ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Form_Entry__c,&apos;Multiple Per Booth&apos;)),(Allowed_Responses__c &lt;  Submitted_Responses__c)),
	AND(NOT(OR(ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Form_Entry__c,&apos;Multiple Per Account&apos;),ISPICKVAL(Forms_Permission__r.Form_Allocation__r.Form_Entry__c,&apos;Multiple Per Booth&apos;))),(Allowed_Responses__c &lt;  Response_Count_All__c))
)</errorConditionFormula>
    <errorMessage>Response Limit Reached.</errorMessage>
</ValidationRule>