force-app/main/default/objects/Form_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Forms_Permission__c</columns>
    <columns>Contact_Edition_Mapping__c</columns>
    <columns>Account__c</columns>
    <columns>Edition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>