force-app/main/default/objects/Form_Data__c/listViews/CPHI_2022_All_Form_Data.listView-meta.xml
<ListView>
    <fullName>CPHI_2022_All_Form_Data</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact_Edition_Mapping__c</columns>
    <columns>Form_Name__c</columns>
    <columns>Form_Type__c</columns>
    <columns>User_Type1__c</columns>
    <columns>Status1__c</columns>
    <columns>Total_Responses__c</columns>
    <columns>Submitted_Responses__c</columns>
    <columns>Approved_Responses__c</columns>
    <columns>Rejected_Responses__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Edition__c</field>
        <operation>equals</operation>
        <value>CPHI Frankfurt 2022</value>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>CPHI 2022 - All Form Data</label>
</ListView>