force-app/main/default/objects/Form_Data__c/listViews/Data_update_CPHI_2022_All_Form_Data.listView-meta.xml
<ListView>
    <fullName>Data_update_CPHI_2022_All_Form_Data</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact_Edition_Mapping__c</columns>
    <columns>Form_Name__c</columns>
    <columns>Form_Type__c</columns>
    <columns>User_Type1__c</columns>
    <columns>Status1__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Overall_Status__c</columns>
    <columns>Purchase_Data__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Edition_Mapping__c</field>
        <operation>equals</operation>
        <value>CEM-0003992</value>
    </filters>
    <label>Data update CPHI 2022 - All Form Data</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>